# open-orpheus

./: .prettierignore  CONTRIBUTING.md  Cargo.toml  README.md  forge.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  versions.json  vite.main.config.ts
.github/: build-loongarch64.yml
.github/workflows/: build-loongarch64.yml  build.yml  changes.yml  ci.yml  flathub.yml  lint.yml  release.yml
docs/: CONTRIBUTING_en.md  README_en.md  WM_RULES.md
gui/: package.json  svelte.config.ts
gui/src/: app.d.ts
gui/src/lib/: bridge.ts  inputRegion.ts  lyrics.ts  settings.ts  types.ts
modules/database/: .gitattributes  Cargo.toml  README.md  index.d.ts  index.js  package.json
modules/database/__test__/: index.spec.ts
modules/database/src/: collation.rs  lib.rs  values.rs
modules/lifecycle/: package.json
modules/ui/: Cargo.toml  index.d.ts  index.js  package.json  tsconfig.json
modules/ui/__test__/: index.spec.ts
modules/ui/src/: lib.rs
modules/window/: Cargo.toml  index.d.ts  index.js  package.json
modules/window/__test__/: index.spec.ts
modules/window/crates/@open-orpheus/window/src/linux/: wayland.rs
modules/window/src/: lib.rs  linux.rs  macos.rs  windows.rs
modules/window/src/linux/: hook.rs  wayland.rs  x11.rs
packaging/flatpak/: metainfo.xml
patches/: @electron-forge__plugin-vite.patch  @keyv__sqlite.patch  cacheable-request@13.0.19.patch  keyv@6.0.0-alpha.3.patch
scripts/: build-modules.mts
src/: main.ts  preload.ts  util.ts
src/bridge/: desktop-lyrics-api.ts  manage-api.ts  menu-api.ts  preload.ts  register.ts
src/main/: afp.ts  anonymous.ts  audio.ts  cache.ts  cookie.ts  crypto.ts  database.ts  dawn.ts  device.ts  download.ts  folders.ts  fonts.ts  gui.ts  id3.ts  lifecycle.ts  lyrics.ts  menu.ts  ncae.ts  nim.ts  orpheus.ts  pack.ts  request.ts  settings.ts  tray.ts  update.ts  util.ts  window.ts
src/preload/: AudioEffectManager.ts  MusicRecognizer.ts  Player.ts  YunxinIM.ts  audioplayer.ts  channel.ts  desktopLyrics.ts  lyrics.ts  nim.ts  recorder.ts  yunxin.ts
src/shared/: listenTogetherCommand.ts  utils.ts
src/windows/: desktop-lyrics-preview.ts  desktop-lyrics.ts  manage.ts  menu.ts  mini-player.ts
src/worklets/: audio-effect.ts  music-recorder.ts  pcm-honeypot.ts
types/: desktop-lyrics.ts  dui.ts  lyrics.ts  manage.ts  mini-player.ts  settings.ts
(+71 files in other folders)
