
[package]
authors = ["YUCLing <luotianyi@luotianyi.me>"]
edition = "2021"
name    = "database"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "3.0.0"
napi-derive = "3.0.0"
pinyin      = { version = "0.11", features = ["plain"] }
rusqlite    = { version = "0.38.0", features = ["bundled", "collation"] }

[build-dependencies]
napi-build = "2"
