
[package]
authors = ["YUCLing <luotianyi@luotianyi.me>"]
edition = "2021"
name    = "ui"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi.workspace = true
napi-derive.workspace = true
font-kit = { version = "0.14.3", features = ["source-fontconfig-dlopen"] }

[build-dependencies]
napi-build = "2"
