
[package]
authors = ["YUCLing <luotianyi@luotianyi.me>"]
edition = "2024"
name    = "window"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "3.0.0"
napi-derive = "3.0.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62.2"
features = [
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.182"
sighook = "0.10.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSEvent", "NSWindow", "NSView"] }
objc2-foundation = { version = "0.3", features = ["NSGeometry", "objc2-core-foundation"] }

[build-dependencies]
napi-build = "2"
